--- a/index.html
+++ b/index.html
@@ -3,27 +3,35 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOGIN PAGE</title>
+    <title>login page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+        integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="box">
-        <h1>login page</h1>
-        <form action="">
-            <div class="page">
-                <label for="name">Username:</label>
-                <input type="name" id="name" placeholder="">
-            </div>
-            <div class="page">
-                <label for="name">Passaword:</label>
-                <input type="password" id="name" placeholder="">
-            </div>
-                <p id="s">forgot password</p>
-            <button  id="btn" class="page">submit</button>
-        </form>
-
+    <div class="main">
+        <h1>LOGIN</h1>
+        <div class="login-item">
+            <label for="username">Username</label>
+            <input type="text" id="username" placeholder="type your username">
+        </div>
+        <div class="login-item">
+            <label for="password">Password</label>
+            <input type="password" id="password" placeholder="type your password">
+        </div>
+        <p>Forgot password?</p>
+        <button class="btn">Login</button>
+        <h5>or sign up using</h5>
+        <div class="containt">
+            <i class="fab fa-facebook fa-2x" style="color: rgb(2, 3, 68)"></i>
+            <i class="fab fa-twitter-square fa-2x" style="color: rgb(12, 137, 209)"></i>
+            <i class="fab fa-google-plus fa-2x" style="color: rgb(180, 27, 47)"></i>
+        </div>
     </div>
 </body>
 
