--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <p>Forgot password?</p>
         <button class="btn">Login</button>
-        <h5>or sign up using</h5>
+        <h5 style="cursor: pointer">or sign up using</h5>
         <div class="containt">
             <i class="fab fa-facebook fa-2x" style="color: rgb(2, 3, 68)"></i>
             <i class="fab fa-twitter-square fa-2x" style="color: rgb(12, 137, 209)"></i>
